package ASReservaVuelos.pDecorator;

public interface INotifier {
    void send(String message);
}
