package ASReservaVuelos.pFactoryMethod;

public enum ECity {
    LA_PAZ,
    COCHABAMBA,
    TARIJA
}
