package ASReservaVuelos.pFactoryMethod;

public interface IDestinoVuelo {
    double calcularCargosVuelo();
}
