package ASReservaVuelos.pStrategy;

public enum ETarifa {
    DOLLARS,
    BOLIVIANOS,
    PESOS_ARGENTINOS
}
