package ASReservaVuelos.pStrategy;

public interface ITarifaBase {
    double calcularMontoTarifa(double monto);
}
