@startuml "Reserva de vuelos - Juancho"
title "Reserva de vuelos - Juancho"
package "Decorator Pattern" <<Rectangle>> {
    interface "INotifier" as iNotifier {
        --
        + void send(String message);
    }

    class "PDFNotifier" as pdfNotifier{
        --
        + void send(String message)
    }
    class "BaseNotifier" as baseNotifier{
         - INotifier wrapppe
         --
         + BaseNotifier (INotifier notifier)
         + void send(String message)
    }
    class "MailNotifier" as mailNotifier{
        --
        + void send(String message)
    }
    class "SMSNotifier" as smsNotifier{
        --
        + void send(String message)
    }

    class "ConfigurationNotifier" as configNotifier{
        - INotifier _notifier
        - boolean _enableMail
        - boolean _enableSMS
        --
        + ConfigurationNotifier(boolean enableMail,boolean enableSMS
        - void configNotifier()
        + void SendNotification(String message)
    }
    
     iNotifier <- configNotifier

    pdfNotifier .|> iNotifier
    iNotifier <|.. baseNotifier
    
    baseNotifier o-- iNotifier

    baseNotifier <|-- mailNotifier
    baseNotifier <|-- smsNotifier

}
package "Strategy Pattern" <<Rectangle>> {
    class "CalculadoraTarifa" as calculator {
        -ITarifaBase _tarifa
        --
        +setStrategy(ITarifaBase)
        +calcularTarifaVuelo(double monto)
    }

    note top of calculator 
        public double calcularTarifaVuelo(double monto){
            ITarifaBase.calcularMontoTarifa(monto)
        }
    end note

    enum "ETarifa" as eTarifa{
        DOLLARS,
        BOLIVIANOS,
        PESOS_ARGENTINOS
    }

    interface "ITarifaBase" as baseStrategy {
        --
        +calcularMontoTarifa(double monto): double
    }

    note right of baseStrategy
        La tarifa debe ser calculada 
        según la siguiente forma:

        Total = monto * factorConversion + impuestos
    end note

    class "TarifaDollars" as dollarsStrategy {
        --
        +calcularMontoTarifa(double monto): double
    }

    class "TarifaBolivianos" as bolivianosStrategy{
        --
        +calcularMontoTarifa(double monto): double
    }

    class "TarifaPesosArgentinos" as argentinosStrategy{
        --
        +calcularMontoTarifa(double monto): double
        -calcularCargoMonth():double
    }

    calculator o-- baseStrategy 

    dollarsStrategy -|> baseStrategy
    baseStrategy <|-- bolivianosStrategy
    baseStrategy <|-- argentinosStrategy
}

package "Factory Pattern" <<Rectangle>>{
    interface "IDestinoVuelo" as destinoVuelo {
        
        --
        double calcularCargosVuelo(int adultPassanger, int kidsPassanger, date departureDate, \n                                  date returnDate, CityOrigin cityOrigin)
    }

    note right of destinoVuelo
        El precio de los pasajeros adultos y niños 
        es distinto para cada uno de los destinos

        El total de cargo del vuelo debe ser calculado:

        TOTAL = base + (qAdults * precioAdult) + (qKids * precioKids) + (cargoMonth) + (qDays * precioDay)
    end note

    class "VueloLaPaz" as vueloLaPaz{
        - ECity _cityOrigin
        - int _adultPassanger
        - int _kidsPassanger
        - date _departureDate
        - date _returnDate

        - double _base
        - double _precioAdults
        - double _precioKids
        - double _cargoMonth
        - double _precioDay
        --
        + VueloLaPaz(ECity cityOrigin, int adultPassanger, \n                     int kidsPassanger, date departureDate, date returnDate)
        + setBase(double)
        + setPrecioAdults(double)
        + setPrecioKids(double)
        + setCargoMonth(double)
        + setPrecioDay(double)
        + double calcularCargosVuelo()
    }
    class "VueloCochabamba" as vueloCocha{
        - ECity _cityOrigin
        - int _adultPassanger
        - int _kidsPassanger
        - date _departureDate
        - date _returnDate

        - double _base
        - double _precioAdults
        - double _precioKids
        - double _cargoMonth
        - double _precioDay
        --
        + VueloCochabamba(ECity cityOrigin, int adultPassanger, \n                     int kidsPassanger, date departureDate, date returnDate)
        + setBase(double)
        + setPrecioAdults(double)
        + setPrecioKids(double)
        + setCargoMonth(double)
        + setPrecioDay(double)
        + double calcularCargosVuelo()
    }
    class "VueloTarija" as vueloTarija{
        - ECity _cityOrigin
        - int _adultPassanger
        - int _kidsPassanger
        - date _departureDate
        - date _returnDate

        - double _base
        - double _precioAdults
        - double _precioKids
        - double _cargoMonth
        - double _precioDay
        --
        + VueloTarija(ECity cityOrigin, int adultPassanger, \n                     int kidsPassanger, date departureDate, date returnDate)
        + setBase(double)
        + setPrecioAdults(double)
        + setPrecioKids(double)
        + setCargoMonth(double)
        + setPrecioDay(double)
        + double calcularCargosVuelo()
    }
    enum "ECity" as eCity{
        LA_PAZ,
        COCHABAMBA,
        TARIJA
    }

    class "Creator" as creator{
        - **IDestinoVuelo** _vuelo
        - CalculadoraTarifa _calculadora
        
        --
        - IDestinoVuelo **CrearDestino**(CityFinal cityFinal)
        - IDestinoVuelo **CrearVuelo**(ECity cityOrigin, int adultPassanger, \n                     int kidsPassanger, date departureDate, date returnDate)
        + CalcularTotalVuelo()
        + Creator(ETarifa strategyTarifa, ECity cityOrigin, ECity cityFinal, int adultPassanger, \n           int kidsPassanger, date departureDate, date returnDate)
        - createStrategy()
    }

    note top of creator
        public setParameter(ETarifa strategyTarifa, ECity cityOrigin, 
                                    ECity cityFinal, int adultPassanger, int kidsPassanger, 
                                    Date departureDate, Date returnDate){
            _calculadora.setStrategy(createStrategy(strategy));
        }
        

        double CalcularTotalVuelo(){
            vuelo = this.CrearDestino(cityFinal);
            double monto = vuelo.calcularCargosVuelo();
            double total = _calculadora.CalcularTarifaVuelo(monto);
        }

        private IDestinoVuelo CrearDestino(cityFinal) {
            switch(cityFinal){
                case LA_PAZ: return new CreatorVueloLapaz().crearVuelo(...);
                case COCHABAMBA: return new CreatorVueloCochabamba().crearVuelo(...);
                case TARIJA: return new CreatorVueloTarija().crearVuelo(...);
            }
        }

        createStrategy(){
             switch(strategy){
                case DOLLARS: return new TarifaDolares();
                case BOLIVIANOS: return new TarifaBolivianos();
                case PESOS_ARGENTINOS: return new TarifaPesosArgentinos();
            }
        }
    end note

    class "CreatorVueloLapaz" as creatorLaPaz{
        - double _base
        - double _precioAdults
        - double _precioKids
        - double _cargoMonth
        - double _precioDay
        --
        + IDestinoVuelo CrearVuelo(ECity cityOrigin, int adultPassanger, \n                     int kidsPassanger, date departureDate, date returnDate)
    }

    class "CreatorVueloCochabamba" as creatorCocha{
        - double _base
        - double _precioAdults
        - double _precioKids
        - double _cargoMonth
        - double _precioDay
        --
        + IDestinoVuelo CrearVuelo(ECity cityOrigin, int adultPassanger, \n                     int kidsPassanger, date departureDate, date returnDate)
    }

    class "CreatorVueloTarija" as creatorTarija{
        - double _base
        - double _precioAdults
        - double _precioKids
        - double _cargoMonth
        - double _precioDay
        --
        + IDestinoVuelo CrearVuelo(ECity cityOrigin, int adultPassanger, \n                     int kidsPassanger, date departureDate, date returnDate)
    }

    vueloLaPaz --|> destinoVuelo
    vueloCocha --|> destinoVuelo
    vueloTarija --|> destinoVuelo

    creator <|-- creatorLaPaz
    creator <|-- creatorCocha
    creator <|-- creatorTarija

    creator .> destinoVuelo
    creator .> eCity
    creator .> eTarifa
    baseStrategy <. creator
    creator -> calculator

}

@enduml